# npu_cmodel

./: .gitignore  CMakeLists.txt  README.md  npu_common.h  npu_cpu.cpp  npu_cpu.h  npu_dma.cpp  npu_dma.h  npu_rvv.cpp  npu_rvv.h  npu_sram.cpp  npu_sram.h  npu_top.cpp  npu_tpu.cpp  npu_tpu.h
data/: conv3d_bias_bf16.txt
operator/: operator_conv3d.cpp  operator_conv3d.h  operator_conv3d_patched.cpp  operator_conv3d_patched.h  operator_gelu.cpp  operator_gelu.h  operator_matmul.cpp  operator_matmul.h  operator_silu.cpp  operator_silu.h
usecase/: t000_silu.cpp  t000_silu.h  t001_matmul.cpp  t001_matmul.h  t002_gelu.cpp  t002_gelu.h  t003_conv3d.cpp  t003_conv3d.h  t004_conv3d_patched.cpp  t004_conv3d_patched.h
